--- a/public/register.html
+++ b/public/register.html
@@ -8,6 +8,20 @@
     <script src="./js/register.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <h2>Register</h2>
+        <form id="registerForm">
+            <div class="form-group">
+                <label for="username">Email:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button type="submit">Register</button>
+        </form>
+        <p id="error"></p>
+    </div>
 </body>
 </html>
