--- a/public/login.html
+++ b/public/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Document</title>
-    <script src="./js/register.js" defer></script>
+    <script src="./js/login.js" defer></script>
 </head>
 <body>
     <div class="container">
