logout and middleware

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
     <script src="./js/main.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div id="message"></div>
+        <button id="logout" style="display: none">Logout</button>
+    </div>
 </body>
 </html>
