--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div id="message"></div>
-        <button id="logout" style="display: none">Logout</button>
+        <button id="logout" class="hidden">Logout</button>
     </div>
 </body>
 </html>
